Booking system in progress

--- a/smetro/views/user/dashboard.ejs
+++ b/smetro/views/user/dashboard.ejs
@@ -14,14 +14,45 @@
 </head>
 
 <body>
-    <%-include('../partials/nav') %>
-    <a href="/userlogout">log out</a>
+    <%-include('../partials/navlogged') %>
 
-    <%if(typeof arr != 'undefined'){
-        %>
-            <h1>You are logged in MR./MRs. <%=arr['username']%></h1>
-        <%
-    }%>
+    <div class="container my-4">
+        <%if(typeof arr != 'undefined'){
+            %>
+                <h1 class="text-center">Welcome MR/MRs <%=arr['username']%>.</h1>
+            <%
+        }%>
+        <h1 class="text-center">Book a ticket</h1>
+        <form action="/user/bookticket" method="post">
+            <div class="form-row">
+                <div class="col">
+                    <label for="from">From:</label>
+                    <input type="text" maxlength="20" class="form-control" id="from" name="from" required>
+                </div>
+                <div class="col">
+                    <label for="to">To:</label>
+                    <input type="text" maxlength="20" class="form-control" id="to" name="to" required>
+                </div>
+              </div>
+              <br>
+              <div class="form-row">
+                  <div class="col">
+                    <label for="journeydate">Journey Date:</label>
+                    <input type="date" class="form-control" id="journeydate" name="journeydate" required>
+                  </div>
+                  <!-- <div class="col">
+                    <label for="compartment">Select a compartment:</label>
+                    <input type="text" maxlength="20" class="form-control" id="comaprtment" name="comaprtment"
+                        aria-describedby="emailHelp" required>
+                  </div> -->
+              </div>
+              <br>
+    
+            <button type="submit" class="btn btn-primary">Search</button><br><br>
+        </form>
+    </div>
+
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
