--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -14,10 +14,10 @@
 </head>
 
 <body> 
-    <%-include('partials/nav') %> 
-    <h1 class="text-center">Welcome to SMetro</h1><br><br>
+    <%-include('../partials/navlogged') %> 
+    <h1 class="text-center">Your ticket has been confirmed</h1><br><br>
     <div class="text-center">
-        <img src="../img/train.png" class="mx-auto" height="600" width="1000" alt="Responsive image">
+        <img src="../img/qr.png" class="mx-auto" height="500" width="500" alt="Responsive image">
     </div>
     
 
@@ -29,7 +29,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
