QR code generation system modified

--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -15,7 +15,8 @@
 
 <body> 
     <%-include('../partials/navlogged') %> 
-    <h1 class="text-center">Your ticket has been confirmed</h1><br><br>
+    <h1 class="text-center">Here is your QR code.</h1><br><br>
+    <h3 class="text-center">Reservation ID: <%=reservationid%></h3><br>
     <div class="text-center">
         <img src="../img/qr.png" class="mx-auto" height="500" width="500" alt="Responsive image">
     </div>
