printing functionality of QR code implemented

--- a/smetro/views/user/bookticket.ejs
+++ b/smetro/views/user/bookticket.ejs
@@ -25,7 +25,7 @@
 
         <div class="card shadow mb-4 my-2">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-info">Ticket List</h6>
+                <h3 class="m-0 font-weight-bold text-info text-center">Ticket List</h3>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
