Modifications in the ticket

--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -18,7 +18,8 @@
     <div class="jumbotron">
         <div class="card shadow mb-4 my-2 mx-auto" style="max-width: 700px;">
             <div class="card-header py-3">
-                <h3 class="text-center">Welcome to SMetro. Here is your ticket.</h3><br><br>
+                <h3 class="p-3 mb-2 bg-success text-white text-center">Welcome to SMetro. Here is your ticket.</h3><br>
+                <img src="../img/train.png" class="d-block mx-auto" height="100" width="150" alt="Responsive image"><br>
                 <div class="row">
                     <div class="col-4"><h4>Reservation ID:</h4></div>
                     <div class="col-8"><h4><%=results.rows[0].reservationid%></h4></div>
