Admin sign up created

--- a/smetro/views/admin/adminlogin.ejs
+++ b/smetro/views/admin/adminlogin.ejs
@@ -29,7 +29,7 @@
     
 
     <div class="container my-4">
-        <h1 class="text-center">Log in to SMetro</h1>
+        <h1 class="text-center">Log in to SMetro as Admin</h1>
         <form action="/user/userlogin" method="post">
 
             <div class="form-group">
@@ -46,7 +46,6 @@
 
             <button type="submit" class="btn btn-primary">Log In</button><br><br>
         </form>
-        <a class="btn btn-success" href="/admin/adminlogin"><h7>Log in as admin</h7></a>
     </div>
 
     <!-- Optional JavaScript -->
