--- a/smetro/views/admin/adminsignup.ejs
+++ b/smetro/views/admin/adminsignup.ejs
@@ -17,45 +17,48 @@
     <%-include('../partials/nav') %>
 
     <div class="container my-4">
-        <h1 class="text-center">Signup to SMetro</h1>
-        <form action="/user/usersignup" method="post">
+        <h1 class="text-center">Signup to SMetro As admin</h1>
+        <form action="/admin/adminsignup" method="post">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" maxlength="20" class="form-control" id="username" name="username"
+                <label for="masterkey">Master Key</label>
+                <input type="password" maxlength="20" class="form-control" id="masterkey" name="masterkey"
+                    aria-describedby="emailHelp" required>
+            </div>
+            <div class="form-group">
+                <label for="adminname">adminname</label>
+                <input type="text" maxlength="20" class="form-control" id="adminname" name="adminname"
                     aria-describedby="emailHelp" placeholder="Not email" required>
             </div>
 
             <div class="form-group">
-                <label for="usernid">NID</label>
-                <input type="text" maxlength="20" class="form-control" id="usernid" name="usernid"
+                <label for="adminnid">NID</label>
+                <input type="text" maxlength="20" class="form-control" id="adminnid" name="adminnid"
                     aria-describedby="emailHelp" placeholder="" required>
             </div>
 
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" maxlength="50" class="form-control" id="useremail" name="useremail"
+                <input type="email" maxlength="50" class="form-control" id="adminemail" name="adminemail"
                     aria-describedby="emailHelp" required>
             </div>
 
             <div class="form-group">
-                <label for="userphone">phone</label>
-                <input type="tel" class="form-control" id="phone" name="userphone" maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
+                <label for="adminphone">phone</label>
+                <input type="tel" class="form-control" id="phone" name="adminphone" maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
             </div>
 
             <div class="form-group">
-                <label for="userpassword">Password</label>
-                <input type="password" maxlength="23" class="form-control" id="userpassword" name="userpassword" required>
+                <label for="adminpassword">Password</label>
+                <input type="password" maxlength="23" class="form-control" id="adminpassword" name="adminpassword" required>
             </div>
             <div class="form-group">
-                <label for="cuserpassword">Confirm Password</label>
-                <input type="password" maxlength="23" class="form-control" id="cuserpassword" name="cuserpassword" required>
+                <label for="cadminpassword">Confirm Password</label>
+                <input type="password" maxlength="23" class="form-control" id="cadminpassword" name="cadminpassword" required>
                 <small id="emailHelp" class="form-text text-muted">Make sure to type the same password</small>
             </div>
 
             <button type="submit" class="btn btn-primary">SignUp</button><br><br>
         </form>
-        <a class="btn btn-success" href="/admin/adminsignup"><h7>Sign up as admin</h7></a>
-
     </div>
 
     <!-- Optional JavaScript -->
