--- a/smetro/views/user/tickethistory.ejs
+++ b/smetro/views/user/tickethistory.ejs
@@ -70,7 +70,7 @@
                                         <form action="/user/showqr" method="post">
                                             <input type="hidden" maxlength="50" class="form-control" 
                                             id="reservationid" name="reservationid" aria-describedby="emailHelp" value=<%=data.reservationid %> required>
-                                            <button type="submit" class="btn btn-success">Generate QR</button><br><br>
+                                            <button type="submit" class="btn btn-success">Generate Ticket</button><br><br>
                                         </form>
                                         
                                     </td>
