admin log in system implemented

--- a/smetro/views/admin/adminlogin.ejs
+++ b/smetro/views/admin/adminlogin.ejs
@@ -30,18 +30,18 @@
 
     <div class="container my-4">
         <h1 class="text-center">Log in to SMetro as Admin</h1>
-        <form action="/user/userlogin" method="post">
+        <form action="/admin/adminlogin" method="post">
 
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" maxlength="50" class="form-control" id="email" name="email"
+                <label for="adminemail">Email</label>
+                <input type="adminemail" maxlength="50" class="form-control" id="adminemail" name="adminemail"
                     aria-describedby="emailHelp" required>
             </div>
 
             
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" maxlength="23" class="form-control" id="password" name="password" required>
+                <label for="adminpassword">Password</label>
+                <input type="password" maxlength="23" class="form-control" id="adminpassword" name="adminpassword" required>
             </div>
 
             <button type="submit" class="btn btn-primary">Log In</button><br><br>
