--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -18,8 +18,8 @@
 
     <div class="container my-4">
         <div class="jumbotron">
-            <a href="../admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
-            <a href="../admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
+            <a href="/admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
+            <a href="/admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
             <h1 class="text-center">Add route fare</h1>
             <form action="/admin/addroute" method="post">
     
