--- a/smetro/views/admin/adminsignup.ejs
+++ b/smetro/views/admin/adminsignup.ejs
@@ -25,7 +25,7 @@
                     aria-describedby="emailHelp" required>
             </div>
             <div class="form-group">
-                <label for="adminname">adminname</label>
+                <label for="adminname">Admin name</label>
                 <input type="text" maxlength="20" class="form-control" id="adminname" name="adminname"
                     aria-describedby="emailHelp" placeholder="Not email" required>
             </div>
