--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -54,6 +54,7 @@
                     <img src="../img/qr.png" class="mx-auto" height="500" width="500" alt="Responsive image">
                 </div>
                 <button class="btn btn-primary btn-lg float-right" onclick="window.print()">Print</button>
+                <a class="btn btn-success" href="/scanqr"><h7>Scan QR Code</h7></a>
             </div>
         </div>
     </div>
