--- a/smetro/views/user/scanqr.ejs
+++ b/smetro/views/user/scanqr.ejs
@@ -42,10 +42,29 @@
         });
         scanner.render(success, error);
         function success(result) {
-            document.getElementById("result").innerHTML = `<h2>Success!</h2>
-                                                            <p><a href="${result}">${result}</a></p>`;
-            //send the result to database
-            
+            result = result.replace(/"/g, '');
+            // send the result to the server
+            fetch('/api/scan', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ result: result })
+            })
+            .then(response => response.json())
+            .then(data =>{
+                console.log(data);
+                window.location.replace('/user/dashboard');
+            })
+            .catch(error => console.error(error));
+
+            document.getElementById("result").innerHTML = `<h2>Success!The door has opened.</h2>
+                                                    <p><a id="redirect-link" href="/user/dashboard">${result}</a></p>`;
+
+            setTimeout(() => {
+            document.getElementById("redirect-link").click();
+            }, 5000);
+
             scanner.clear();
             document.getElementById("reader").remove();
         }
