--- a/smetro/views/user/scanqr.ejs
+++ b/smetro/views/user/scanqr.ejs
@@ -58,11 +58,17 @@
             })
             .catch(error => console.error(error));
 
-            document.getElementById("result").innerHTML = `<h2>Success!The door has opened.</h2>
-                                                    <p><a id="redirect-link" href="/user/dashboard">${result}</a></p>`;
+            document.getElementById("result").innerHTML = `
+                <h2>Success!The door has opened.</h2>
+                <form id="redirect-form" method="POST" action="/user/checkValidity">
+                    <input type="hidden" name="result" value="${result}">
+                    <button type="submit" id="redirect-button" style="display: none;">Redirecting...</button>
+                </form>
+                <p>Redirecting in 5 seconds...</p>
+            `;
 
             setTimeout(() => {
-            document.getElementById("redirect-link").click();
+                document.getElementById("redirect-button").click();
             }, 5000);
 
             scanner.clear();
