scanning expired ticket will reject the entry

--- a/smetro/views/partials/navlogged.ejs
+++ b/smetro/views/partials/navlogged.ejs
@@ -33,7 +33,8 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <div class="mx-2">
-           <a class="btn btn-success" href="/user/tickethistory"><h7>Ticket History</h7></a>
+           <a class="btn btn-success" href="/user/tickethistory"><h7>Eligible Tickets</h7></a>
+           <a class="btn btn-success" href="/user/scanqr"><h7>Scan Ticket</h7></a>
            <a class="btn btn-success" href="/userlogout"><h7>Log Out</h7></a>
         </div>
     </div>
