--- a/smetro/views/user/tickethistory.ejs
+++ b/smetro/views/user/tickethistory.ejs
@@ -196,30 +196,21 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
+    <%-include('../partials/header') %>
         
     <title>Login</title>
 </head>
 
 <body>
     <%-include('../partials/navlogged') %>
-
-        <div class="container my-4">
-            <%if(typeof arr !='undefined' ){ %>
-                <h6 class="text-center">MR/MRs <%=arr['username']%>.</h6>
-                <% }%>
-                    <h6 class="text-center">Please Confirm a ticket</h6>
-        </div>
-        <div class="container">
+        <div class="container" style="margin-top: 10px;">
         <div class="row">
         <div class="col-lg-10 mx-auto">
         <div class="career-search mb-60">
         <div class="filter-result">
             <% results.rows.forEach(function(data) { %>
-                <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
+                <div class="job-box d-md-flex align-items-center justify-content-between mb-30" style="margin-top: 20px;">
                     <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
-                        <!-- <div class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex">
-                            FD
-                        </div> -->
                         <div class="job-content">
                             <ul>
                               <h5 class="text-center text-md-left"><%= data.reservationid %></h5>
@@ -281,7 +272,7 @@
         </div>
         </div>
 
-
+        <%-include('../partials/footer') %>
 
 
 
