--- a/smetro/views/admin/addtrain.ejs
+++ b/smetro/views/admin/addtrain.ejs
@@ -75,7 +75,81 @@
                 <button type="submit" class="btn btn-success">Add train information</button><br><br>
             </form>
         </div>
+
+
+
+
+
+        <div class="card shadow mb-4 my-2">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-info text-center">Ticket List</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>Train ID</th>
+                                <th>Name</th>
+                                <th>Departure</th>
+                                <th>Destination</th>
+                                <th>Departure Time</th>
+                                <th>Arrival Time</th>
+                                <th>Seats</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% result.rows.forEach(function(data) { %>
+                                <tr>
+                                    <td>
+                                        <%= data.trainid %>
+                                    </td>
+                                    <td>
+                                        <%= data.trainname %>
+                                    </td>
+                                    <td>
+                                        <%= data.departure %>
+                                    </td>
+                                    <td>
+                                        <%= data.destination %>
+                                    </td>
+                                    <td>
+                                        <%= data.departuretime %>
+                                    </td>
+                                    <td>
+                                        <%= data.arrivaltime %>
+                                    </td>
+                                    <td>
+                                        <%= data.seats %>
+                                    </td>
+                                    <td>
+                                        <form action="/admin/deletetrain" method="post">
+                                            <input type="hidden" maxlength="50" class="form-control" 
+                                            id="deletetrain" name="deletetrain" aria-describedby="emailHelp" value=<%=data.trainid %> required>
+                                            <button type="submit" class="btn btn-danger">Delete</button><br><br>
+                                        </form>
+                                        
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>  
+
+
+
     </div>
+
+    
+
+
+    
+    
+
+
+
 
     
 
