--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -45,6 +45,67 @@
                 <button type="submit" class="btn btn-success">Add route fare</button><br><br>
             </form>
         </div>
+
+        
+
+
+
+
+
+        
+        
+        <div class="card shadow mb-4 my-2">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-info text-center">Fare List</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-borderless" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>Fare ID</th>
+                                <th>From</th>
+                                <th>To</th>
+                                <th>Fare</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% results.rows.forEach(function(data) { %>
+                                <tr>
+                                    <td>
+                                        <%= data.fareid %>
+                                    </td>
+                                    <td>
+                                        <%= data.departure %>
+                                    </td>
+                                    <td>
+                                        <%= data.destination %>
+                                    </td>
+                                    <td>
+                                        <%= data.amount %>
+                                    </td>
+                                    <td>
+                                        <form action="/admin/deletefare" method="post">
+                                            <input type="hidden" maxlength="50" class="form-control" 
+                                            id="deletefare" name="deletefare" aria-describedby="emailHelp" value=<%=data.fareid %> required>
+                                            <button type="submit" class="btn btn-danger">Delete</button><br><br>
+                                        </form>
+                                        
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
     </div>
 
     
