--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -42,7 +42,7 @@
                   </div>
                   <br>
         
-                <button type="submit" class="btn btn-success">Add route fare</button><br><br>
+                <button type="submit" class="btn btn-success">Add Route Fare</button><br><br>
             </form>
         </div>
 
