--- a/smetro/views/partials/nav.ejs
+++ b/smetro/views/partials/nav.ejs
@@ -1,11 +1,27 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">SMetro</a>
+    <style>
+        .navbar-dark .navbar-nav .nav-link {
+            color: #05061f;
+        }
+        .green-letter {
+            color: green;
+        }    
+        .metro-text {
+            color: #05061f;
+        }
+    </style>
+
+
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-transparent">
+    <a class="navbar-brand" href="/">
+        <span class="green-letter">S</span><span class="metro-text">Metro</span>
+    </a>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -17,7 +33,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Services
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -28,43 +44,50 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-        <div class="mx-2">
-           <a class="btn btn-success" href="/user/userlogin"><h7>Login</h7></a>
-           <a class="btn btn-success" href="/user/usersignup"><h7>SignUp</h7></a>
-        </div>
     </div>
-    </nav>
+    
+    <div class="navbar-nav">
+        <a class="nav-link" href="/user/userlogin"> Log In <i class="fas fa-user"></i></a>
+    </div>
+    <div class="navbar-nav">
+        <a class="nav-link" href="/user/usersignup"> Sign Up <i class="fas fa-user-plus"></i></a>
+    </div>
+</nav>
 
-    <%if(typeof error != 'undefined'){
-        error.forEach(error => {
-            %>
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <strong>Sorry!</strong> <%=error.message%>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            <%
-        }) %>
-        <%
-        delete error;
-    } %>
 
-    <%if(typeof no_err != 'undefined'){
-        no_err.forEach(no_err => {
-            %>
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Success!</strong> <%=no_err.message%>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            <%
-        }) %>
+
+
+<%if(typeof error != 'undefined'){
+    error.forEach(error => {
+        %>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Sorry!</strong> <%=error.message%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
         <%
-        delete no_err;
-    } %>
+    }) %>
+    <%
+    delete error;
+} %>
+
+<%if(typeof no_err != 'undefined'){
+    no_err.forEach(no_err => {
+        %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>Success!</strong> <%=no_err.message%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        <%
+    }) %>
+    <%
+    delete no_err;
+} %>
+
+
+
+
+
