--- a/smetro/views/user/bookticket.ejs
+++ b/smetro/views/user/bookticket.ejs
@@ -67,7 +67,7 @@
                                         <%= train.amount%> 
                                     </td>
                                     <td>
-                                        <form action="/user/confirmbook" method="post">
+                                        <form action="/user/varifybooking" method="post">
                                             <input type="hidden" maxlength="50" class="form-control" 
                                             id="trainid" name="trainid" aria-describedby="emailHelp" value=<%=train.trainid %> required>
                                             <button type="submit" class="btn btn-success">Book Now</button><br><br>
