--- a/smetro/views/admin/addtrain.ejs
+++ b/smetro/views/admin/addtrain.ejs
@@ -20,7 +20,8 @@
         <div class="jumbotron">
             <a href="/admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
             <a href="/admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
-            <a href="/admin/stuckpassengers"><button type="button" class="btn btn-secondary my-2">Stuck Passengers</button></a>
+            <a href="/admin/stuckpassengers"><button type="button" class="btn btn-secondary my-2">Stuck Passengers</button></a> 
+            <a href="/admin/addbalance"><button type="button" class="btn btn-secondary my-2">addbalance</button></a>
 
 
             
