--- a/smetro/views/admin/admindashboard.ejs
+++ b/smetro/views/admin/admindashboard.ejs
@@ -21,6 +21,8 @@
             <a href="/admin/admindashboard"><button type="button" class="btn btn-secondary my-2">Add a route and fare</button></a>
             <a href="/admin/addtrain"><button type="button" class="btn btn-secondary my-2">Add a train</button></a>
             <a href="/admin/stuckpassengers"><button type="button" class="btn btn-secondary my-2">Stuck Passengers</button></a>
+            <a href="../admin/addbalance"><button type="button" class="btn btn-secondary my-2">Add Balance</button></a>
+
             <h1 class="text-center">Add route fare</h1>
             <form action="/admin/addroute" method="post">
     
