--- a/smetro/views/user/userlogin.ejs
+++ b/smetro/views/user/userlogin.ejs
@@ -2,19 +2,11 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <%-include('../partials/header') %>
     <title>Login</title>
 </head>
 
 <body>
-    <%-include('../partials/nav') %>
     <%if(messages.error){
         %>
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -26,28 +18,62 @@
         <%
         delete error;
     } %>
-    
 
-    <div class="container my-4">
-        <h1 class="text-center">Log in to SMetro</h1>
-        <form action="/user/userlogin" method="post">
+    <section class="vh-100" style="background-color: #9A616D; margin-top: -50px;">
+        <%-include('../partials/nav') %>
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+              <div class="card" style="border-radius: 1rem;">
+                <div class="row g-0">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block">
+                    <img src="../img/metro2.jpg" alt="login form" class="img-fluid fit-section-image"
+                      style="border-radius: 1rem 0 0 1rem;" />
+                  </div>
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+      
+                      <!-- Rest of the form code -->
+                      <form action="/user/userlogin" method="post">
+      
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                          <span class="h1 fw-bold mb-0">Logo</span>
+                        </div>
+      
+                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+      
+                        <div class="form-outline mb-4">
+                          <input type="email" class="form-control form-control-lg maxlength="50" 
+                          id="email" name="email"
+                          aria-describedby="emailHelp" required/>
+                          <label class="form-label" for="email">Email address</label>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                        <input type="password" maxlength="23" class="form-control form-control-lg"  id="password" name="password" required>
+                          <label class="form-label" for="password">Password</label>
+                        </div>
+      
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                        </div>
+                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/user/usersignup"
+                            style="color: #393f81;">Register here</a></p>
+                      </form>
 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" maxlength="50" class="form-control" id="email" name="email"
-                    aria-describedby="emailHelp" required>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </section>
+      
 
-            
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" maxlength="23" class="form-control" id="password" name="password" required>
-            </div>
 
-            <button type="submit" class="btn btn-primary">Log In</button><br><br>
-        </form>
-        <a class="btn btn-success" href="/admin/adminlogin"><h7>Log in as admin</h7></a>
-    </div>
+    <%-include('../partials/footer') %>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
